# TdrCreator

./: .dockerignore  .env.example  Dockerfile  Prompt.md  README.md  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: assumptions.md
sample_docs/: sample_architecture.md  sample_processes.md
tdrcreator/: __init__.py  cli.py  config.py
tdrcreator/citations/: bibtex.py  formatter.py  validator.py
tdrcreator/examples/: BetriebsratsHelferlein.md
tdrcreator/ingest/: chunker.py  ocr.py  parser.py
tdrcreator/literature/: guard.py  searcher.py
tdrcreator/report/: builder.py  exporter.py  llm.py  template.py
tdrcreator/retrieval/: embedder.py  index.py  retriever.py
tdrcreator/security/: logger.py  privacy.py
tdrcreator/webapp/: api.py
tdrcreator/webapp/static/: index.html  manifest.json
tests/: test_citations.py  test_integration.py  test_query_guard.py  test_validator.py
